added book btn but it didnt work. And small fixes

--- a/likevavo/src/main/resources/templates/error.html
+++ b/likevavo/src/main/resources/templates/error.html
@@ -1,1 +1,12 @@
-error
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Error</title>
+</head>
+<body>
+    <h1>Error</h1>
+    <p>Status code: [[${status}]]</p>
+    <p>Message: [[${message}]]</p>
+    <p>Exception: [[${exception}]]</p>
+</body>
+</html>
