--- a/likevavo/src/main/resources/templates/lk.html
+++ b/likevavo/src/main/resources/templates/lk.html
@@ -47,25 +47,30 @@
             <p>Email: <span th:text="${user.getEmail()}"></span></p>
             <p>Role: <span th:text="${user.getRole()}"></span></p>
         </div>
-        <!-- <div class="orders">
-            <h2>Мои заказы</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Номер заказа</th>
-                        <th>Дата заказа</th>
-                        <th>Статус</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="order : ${user.orders}">
-                        <td th:text="${order.number}"></td>
-                        <td th:text="${order.date}"></td>
-                        <td th:text="${order.status}"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div> -->
+        <h1>My Bookings</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Booking ID</th>
+                <th>Ticket ID</th>
+                <th>Route</th>
+                <th>Departure Time</th>
+                <th>Arrival Time</th>
+                <th>Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Loop through all bookings for the user -->
+            <tr th:each="booking : ${bookings}">
+                <td th:text="${booking.getId()}"></td>
+                <td th:text="${booking.getTicket().getId()}"></td>
+                <td th:text="${booking.getTicket().getRoute().getOriginAirport().getCity().getName()} + ' - ' + ${booking.getTicket().getRoute().getDestinationAirport().getCity().getName()}"></td>
+                <td th:text="${booking.getTicket().getDepartureTime()}"></td>
+                <td th:text="${booking.getTicket().getArrivalTime()}"></td>
+                <td th:text="${booking.getQuantity()}"></td>
+            </tr>
+        </tbody>
+    </table>
     </div>
 </body>
 </html>
