--- a/likevavo/src/main/resources/templates/login.html
+++ b/likevavo/src/main/resources/templates/login.html
@@ -2,15 +2,115 @@
 <html>
 <head>
     <title>Login Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #ffffff;
+        }
+        h1 {
+            text-align: center;
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #333;
+            font-weight: bolder;
+            font-family: 'Roboto', sans-serif;
+            font-size: 70px;
+        }
+        form {
+            max-width: 30%;
+            margin: 0 auto;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 45px;
+            box-shadow: 5px 15px 47px rgba(50, 53, 255, 0.986);
+            /* Center the form horizontally */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        label {
+            display: block;
+            margin-bottom: 10px;
+            color: #000000;
+        }
+        input[type="username"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+            box-sizing: border-box;
+        }
+        input[type="submit"] {
+            background-color: #ff6f32;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #ff521f;
+        }
+        .reglink {
+            color: #1c7fef;
+            text-decoration: none;
+        }
+        .reg {
+            color: #000000;
+        }
+        .reglink:hover {
+            color: #ff6f32;
+        }
+        .error {
+            color: red;
+            font-size: 12px;
+            margin-top: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Login Page</h1>
-    <form name='f' action="/login/process" method="post">
+    <h1>Avia Tickets</h1>
+    <form name='f' action="/login/process" method="post" onsubmit="return validateForm()">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
+        <input type="username" id="username" name="username"><br>
+        <span id="usernameError" class="error"></span><br>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Login">
+        <input type="password" id="password" name="password"><br>
+        <span id="passwordError" class="error"></span><br>
+        <input type="submit" value="Sign In">
+        <p class="reg">Don't have an account? <a class="reglink" href="/registration">Register here</a></p>
     </form>
+
+    <script>
+        function validateForm() {
+            var username = document.forms["f"]["username"].value;
+            var password = document.forms["f"]["password"].value;
+            var usernameError = document.getElementById("usernameError");
+            var passwordError = document.getElementById("passwordError");
+            var isValid = true;
+
+            if (username == "") {
+                usernameError.innerHTML = "Please enter your username";
+                isValid = false;
+            } else {
+                usernameError.innerHTML = "";
+            }
+
+            if (password == "") {
+                passwordError.innerHTML = "Please enter your password";
+                isValid = false;
+            } else {
+                passwordError.innerHTML = "";
+            }
+
+            return isValid;
+        }
+    </script>
 </body>
 </html>
