--- a/likevavo/src/main/resources/templates/search.html
+++ b/likevavo/src/main/resources/templates/search.html
@@ -7,7 +7,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400;700&display=swap');
 
         body {
-            background-color: #f2f2f2;
+            background-color: #ffffff;
             font-family: 'Wix Madefor Display', sans-serif;
         }
 
@@ -25,20 +25,24 @@
             background-color: white;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-            width: 50%;
+            box-shadow: 5px 15px 42px #0c73fe;
+            width: 70%; /* Updated width */
             margin: 0 auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);        
         }
 
         @media only screen and (min-width: 768px) {
             form {
-                width: 70%;
+                width: 80%; /* Updated width */
             }
         }
 
         @media only screen and (min-width: 992px) {
             form {
-                width: 50%;
+                width: 60%; /* Updated width */
             }
         }
 
@@ -54,6 +58,7 @@
             border: none;
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
             width: 100%;
+            margin-right: 10px; /* Added margin */
         }
 
         input:focus {
@@ -62,14 +67,14 @@
         }
 
         button {
-            background-color: #4CAF50;
+            background-color: #ff6f32;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
         button:hover {
-            background-color: #3e8e41;
+            background-color: #ff521f;
         }
 
         .error-message {
@@ -78,25 +83,61 @@
             margin-top: 5px;
             text-align: center;
         }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: white;
+            padding: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+        }
+
+        .header h2 {
+            margin: 0;
+        }
+
+        .header button {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-left: 10px;
+            display: inline;
+        }
+
+        .header button:hover {
+            background-color: #3e8e41;
+        }
     </style>
 </head>
 <body>
-    <h1>Flight Search</h1>
+    <div class="header">
+        <h2>Flight Search</h2>
+        <div>
+            <a href="/lk">My Profile</a>
+            <a href="/logout">Logout</a>
+        </div>
+    </div>
     <form method="post" th:action="@{/search}" onsubmit="return validateForm()">
-        <label for="originAirportCity">Origin City:</label>
+        <label for="originAirportCity">FROM:</label>
         <input type="text" id="originCity" name="originCity" required list="originCities">
         <datalist id="originCities">
             <option th:each="city : ${cities}" th:value="${city.getName()}" th:text="${city.getName()}"></option>
         </datalist>
         
-        <label for="destinationAirportCity">Destination City:</label>
+        <label for="destinationAirportCity">TO:</label>
         <input type="text" id="destinationCity" name="destinationCity" required list="destinationCities">
         <datalist id="destinationCities">
             <option th:each="city : ${cities}" th:value="${city.getName()}" th:text="${city.getName()}"></option>
         </datalist>
-        <label for="date">Date:</label>
+        <label for="date">DATE:</label>
         <input type="date" id="date" name="date">
-        <button type="submit">Search</button>
+        <button type="submit">SEARCH</button>
         <div id="error-message" class="error-message"></div>
     </form>
     <script>
@@ -115,6 +156,4 @@
     </script>
 </body>
 </html>
-
-
 
